<resources>
    <string name="app_name">Study Set App</string>
    <string name="click_the_button_to_add_a_flashcard">Click the button to add a flashcard!</string>
    <string name="study_set_app">Study Set App</string>
    <string name="add">Add</string>
    <string name="hint">hint</string>
    <string name="enter_a_term">Enter a term</string>
    <string name="term">Term</string>
    <string name="enter_a_definition">Enter a definition</string>
    <string name="text">Text</string>
    <string name="definition">Definition</string>
    <string name="done">Done</string>
    <string name="go_back">Go Back</string>
</resources>